# backchannel-bot

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.beads/: issues.jsonl
ortus/prompts/: interview-prompt.md
prd/: intake.md
src/backchannel_bot/: __init__.py  __main__.py  claude_client.py  config.py  discord_client.py  logging_config.py  main.py  tmux_client.py
tests/: __init__.py  test_integration.py
