[project]
name = "backchannel-bot"
version = "0.1.0"
description = "A Discord backchannel communication bot for Claude tmux sessions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
backchannel-bot = "backchannel_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backchannel_bot"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
